--- a/public/js/application/src/app/pages/shelves/shelves.component.html
+++ b/public/js/application/src/app/pages/shelves/shelves.component.html
@@ -1,48 +1,54 @@
 <div class="shelve">
-  <div class="container">
-    <form class="form-inline shelve__search-form" (ngSubmit)="searchBooks()">
-      <div class="form-group">
-        <input type="text" name="search" [(ngModel)]="search" class="form-control" required="required">
-      </div>
-      <div class="form-group">
-        <button type="submit" class="btn btn-success"><i class="fa fa-search fa-icon"></i> Search</button>
-      </div>
-    </form>
+    <div class="container">
+        <form class="form-inline shelve__search-form" (ngSubmit)="searchBooks()">
+            <div class="form-group">
+                <input type="text" name="search" [(ngModel)]="search" class="form-control" required="required">
+            </div>
+            <div class="form-group">
+                <button type="submit" class="btn btn-success">
+                    <i class="fa fa-search fa-icon"></i> Search</button>
+            </div>
+        </form>
 
-    <div class="row book__row" *ngFor="let chunk of books.items.getItems() | chunk:3">
-      
-      <div class="col-sm-4 margin-bottom-sm" *ngFor="let book of chunk">
-        <div class="thumbnail book__thumbnail">
-          <img src="{{ book.thumbnail ? book.thumbnail : 'http://placehold.it/150x200' }}" alt="{{ book.title }}">
-          <div class="caption">
-            <h3>
-               {{ book.title }}
-            </h3>
-            <p>
-              {{ book.authors?.join(', ') }}
-            </p>
-            <p *ngIf="book.description">
-              {{ book.description.substr(0, 150) }}
-            </p>
-            <a href="{{ book.previewLink }}" target="_blank">Preview</a>
-          </div>
-          <div class="book__thumbnail__footer padding-top-sm padding-bottom-sm">
-            <a href="#" class="btn btn-primary btn-xs" (click)="markAsRead($event, book)">
-              <i class="fa fa-check"></i>
-            </a>
-          </div>
+        <div class="row book__row" *ngFor="let chunk of books.items.getItems() | chunk:3">
+
+            <div class="col-sm-4 margin-bottom-sm" *ngFor="let book of chunk">
+                <div class="thumbnail book__thumbnail">
+                    <img src="{{ book.thumbnail ? book.thumbnail : 'http://placehold.it/150x200' }}" alt="{{ book.title }}">
+                    <div class="caption">
+                        <h3>
+                            {{ book.title }}
+                        </h3>
+                        <p>
+                            {{ book.authors?.join(', ') }}
+                        </p>
+                        <p *ngIf="book.description">
+                            {{ book.description.substr(0, 150) }}
+                        </p>
+
+                    </div>
+                    <div class="book__thumbnail__footer padding-top-sm padding-bottom-sm">
+                        <div class="btn-group btn-group-justified">
+                            <a [href]="book.preview_link" target="_blank" class="btn btn-primary">Preview</a>
+                            <a href="#" class="btn btn-primary" (click)="markAsRead($event, book)">
+                                <i class="fa fa-check"></i>
+                            </a>
+                        </div>
+                        <div class="rating">
+                            <span class="rating__star" (click)="rateBook($event, book, 5)">☆</span>
+                            <span class="rating__star" (click)="rateBook($event, book, 4)">☆</span>
+                            <span class="rating__star" (click)="rateBook($event, book, 3)">☆</span>
+                            <span class="rating__star" (click)="rateBook($event, book, 2)">☆</span>
+                            <span class="rating__star" (click)="rateBook($event, book, 1)">☆</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
+
+        <app-paginator [pages]="books.totalPages" [activePage]="books.currentPage" [simple]="true" (onPaginationItemClicked)="setBooksPage($event)"
+            *ngIf="books.count > 0">
+        </app-paginator>
+
     </div>
-
-    <app-paginator 
-      [pages]="books.totalPages" 
-      [activePage]="books.currentPage"
-      [simple]="true"
-      (onPaginationItemClicked)="setBooksPage($event)"
-      *ngIf="books.count > 0"
-    >
-    </app-paginator>
-
-  </div>
 </div>
