--- a/public/js/application/src/assets/sass/app.scss
+++ b/public/js/application/src/assets/sass/app.scss
@@ -14,6 +14,7 @@
 
 @import "components/book";
 @import "components/shelve";
+@import "components/rating";
 
 @import "utilities/spacing";
 @import "utilities/icon";
