--- a/public/js/application/src/assets/sass/components/_book.scss
+++ b/public/js/application/src/assets/sass/components/_book.scss
@@ -14,6 +14,7 @@
         margin-bottom: 0;
 
         &__footer {
+            margin-top: auto;
             border-top: 1px solid $color-gray1;
         }
     }
