--- a/public/js/application/src/assets/sass/components/_rating.scss
+++ b/public/js/application/src/assets/sass/components/_rating.scss
@@ -9,7 +9,7 @@
         font-size: 35px;
 
         &:hover:before,
-        // &.checked:before,
+        &.checked:before,
         &:hover ~ &:before
         /* &.checked:before ~ &:before */ {
             cursor: pointer;
