--- a/public/js/application/src/app/components/navbar/navbar.component.html
+++ b/public/js/application/src/app/components/navbar/navbar.component.html
@@ -10,19 +10,36 @@
             </button>
             <a class="navbar-brand" href="#">iRead</a>
         </div>
-        
+
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav" *ngIf="authService.isLoggedIn() | async">
                 <li class="">
                     <a routerLink="/dashboard" routerActiveLink="active">Dashboard</a>
                 </li>
                 <li>
                     <a routerLink="/shelves" routerActiveLink="active">Shelves</a>
                 </li>
+                <li>
+                    <a routerLink="/explore" routerActiveLink="active">Explore</a>
+                </li>
+            </ul>
+
+            <ul class="nav navbar-nav navbar-right">
+
+                <li *ngIf="!authService.isLoggedIn() | async">
+                    <a href="#" routerLink="login">Login</a>
+                </li>
+                <li *ngIf="!authService.isLoggedIn() | async">
+                    <a href="#" routerLink="register">Register</a>
+                </li>
+                <li *ngIf="authService.isLoggedIn() | async">
+                    <a href="#" (click)="logout($event)">Logout</a>
+                </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
     </div>
 </nav>
+
 
