--- a/public/js/application/src/assets/sass/app.scss
+++ b/public/js/application/src/assets/sass/app.scss
@@ -15,6 +15,7 @@
 @import "components/book";
 @import "components/shelve";
 @import "components/rating";
+@import "components/alert";
 
 @import "utilities/spacing";
 @import "utilities/icon";
