--- a/public/js/application/src/app/components/app/app.component.html
+++ b/public/js/application/src/app/components/app/app.component.html
@@ -1,5 +1,6 @@
 <app-navbar></app-navbar>
 <div>
-  <router-outlet></router-outlet>
+    <app-alert></app-alert>
+    <router-outlet></router-outlet>
 </div>
 
