--- a/public/js/application/src/app/pages/explore/explore.component.html
+++ b/public/js/application/src/app/pages/explore/explore.component.html
@@ -5,7 +5,7 @@
             <input type="text" name="search" [(ngModel)]="search" class="form-control" required="required">
         </div>
         <div class="form-group">
-            <button type="submit" class="btn btn-success">
+            <button type="submit" class="btn btn-success" [disabled]="search.length === 0">
                 <i class="fa fa-search fa-icon"></i> Search</button>
         </div>
     </form>
